Fixed infinite scrolling for the home page, realigned and attached default avatar for profile page

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -9,7 +9,7 @@
   margin-top: 85px;
   background-color: white;
   max-width: 100%;
-  margin-bottom: 20px;
+  
 }
 
 .page-no-sidebar {
